[gd_scene load_steps=2 format=3 uid="uid://cxq44ooukv26n"]

[ext_resource type="Script" path="res://UI/Options.gd" id="1_i7cwc"]

[node name="OptionsContainer" type="MarginContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -40.5
offset_bottom = 40.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_right = 12
script = ExtResource("1_i7cwc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="OptionsLabel" type="Label" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "Options"

[node name="MasterContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MasterLabel" type="Label" parent="VBoxContainer/MasterContainer"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
text = "Master"

[node name="MasterSlider" type="HSlider" parent="VBoxContainer/MasterContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -30.0
max_value = 20.0

[node name="MusicContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="VBoxContainer/MusicContainer"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/MusicContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -30.0
max_value = 20.0

[node name="SFxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SFxLabel" type="Label" parent="VBoxContainer/SFxContainer"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
text = "SFx"

[node name="SFxSlider" type="HSlider" parent="VBoxContainer/SFxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -30.0
max_value = 20.0

[node name="ReturnContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50

[node name="Button" type="Button" parent="VBoxContainer/ReturnContainer"]
layout_mode = 2
text = "Return"

[connection signal="value_changed" from="VBoxContainer/MasterContainer/MasterSlider" to="." method="masterVolumeChanged"]
[connection signal="value_changed" from="VBoxContainer/MusicContainer/MusicSlider" to="." method="musicVolumeChanged"]
[connection signal="value_changed" from="VBoxContainer/SFxContainer/SFxSlider" to="." method="sfxVolumeChanged"]
[connection signal="pressed" from="VBoxContainer/ReturnContainer/Button" to="." method="return_pressed"]
